--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bower": "^1.8.2",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^3.0.0",
