--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "author": "Gabriel Medina <gmedina.santos@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "bower": "^1.8.4",
-    "browser-sync": "^2.24.4",
-    "gulp": "^3.9.1",
-    "gulp-clean": "^0.4.0",
-    "gulp-concat": "^2.6.1",
+    "browser-sync": "^2.24.5",
+    "del": "^3.0.0",
+    "gulp": "^4.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^3.0.0",
     "gulp-include": "^2.3.1",
     "gulp-inject-svg": "^0.1.18",
     "gulp-nunjucks-render": "^2.2.2",
-    "gulp-sass": "^3.2.1",
+    "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0"
   }
 }
